fixed broken href

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
         </div>
     </section>
-    <section id="works">
+    <section id="work">
         <div class="header-with-divider background--dark-beige">
             <h1 class="font--large font--Italiana">Co-op Experience</h1>
         </div>
