fixed missing link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <a class="footer--socialMedia-item" href="https://github.com/DrynnBavis" target="_blank"><span class="fa fa-github"></span> Github</a>
             <a class="footer--socialMedia-item" href="https://www.linkedin.com/in/brynn-davis-a7b637133/" target="_blank"><span class="fa fa-linkedin-square"></span> LinkedIn</a>
             <a class="footer--socialMedia-item" href="mailto:drynnbavis@gmail.com"><span class="fa fa-envelope"></span> Email</a>
-            <a class="footer--socialMedia-item" href=""><span class="fa fa-stack-overflow"></span> StackOverflow</a>
+            <a class="footer--socialMedia-item" href="https://stackoverflow.com/users/6822886/capn-jack?tab=profile" target="_blank"><span class="fa fa-stack-overflow"></span> StackOverflow</a>
         </div>
     </section>
     <script src="https://use.fontawesome.com/7c4c923c6c.js"></script>
