fixed passing issue and bad span placement, thanks Jason

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a class="brown font contact-item" href="https://github.com/DrynnBavis" target="_blank"><span class="fa fa-github"></span> GitHub</a>
                     <a class="brown font contact-item" href="https://stackoverflow.com/users/6822886/capn-jack?tab=profile" target="_blank"><span class="fa fa-stack-overflow"></span> StackOverflow</a>
                     <a class="brown font contact-item" href="https://www.linkedin.com/in/brynn-davis-a7b637133/" target="_blank"><span class="fa fa-linkedin-square"></span> LinkedIn</a>
-                    <a class="brown font contact-item" href="mailto:drynnbavis@gmail.com"><span class="fa fa-envelope"> Email</span></a>
+                    <a class="brown font contact-item" href="mailto:drynnbavis@gmail.com"><span class="fa fa-envelope"></span> Email</a>
                 </div>
             </div>
             <a class="green font resume" href="Resume.pdf" target="_blank">Download Resume</a>
