rotating cat added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             </div>
             <a class="green font resume" href="Resume.pdf" target="_blank">Download Resume</a>
         </div>
-        <script src="https://use.fontawesome.com/7c4c923c6c.js"></script>
+        <img src="Satin_Cat.jpg" id="cat">
     </body>
+    <script src="https://use.fontawesome.com/7c4c923c6c.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="scripts.js"></script>
 </html>
