removed satan-worshipping cat in opt for my lime-worshipping face

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id="centre-panel">
+            <img id="face" src="BoatyBrynn.png">
             <h1 class="brown font" id="nametag">Brynn Davis</h1>
             <div id="contact">
                 <hr/>
@@ -19,7 +20,6 @@
             </div>
             <a class="green font resume" href="Resume.pdf" target="_blank">Download Resume</a>
         </div>
-        <img src="Satin_Cat.jpg" id="cat">
     </body>
     <script src="https://use.fontawesome.com/7c4c923c6c.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
