--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     </head>
     <body>
         <div id="centre-panel">
-            <img id="face" src="BoatyBrynn.png">
-            <h1 class="brown font" id="nametag">Brynn Davis</h1>
+            <div id="media">
+                <div class="woodsprite-container hidden">
+                    <div class="woodsprite">
+                        <img class="woodsprite-head" id="woodsprite-head1" src="WoodSprites/head1.svg">
+                        <img class="woodsprite-torso" id="woodsprite-body1" src="WoodSprites/body1.svg">
+                    </div>
+                    <div class="woodsprite">
+                        <img class="woodsprite-head" id="woodsprite-head2" src="WoodSprites/head2.svg">
+                        <img class="woodsprite-torso" id="woodsprite-body2" src="WoodSprites/body2.svg">
+                    </div>
+                    <div class="woodsprite">
+                        <img class="woodsprite-head" id="woodsprite-head3" src="WoodSprites/head3.svg">
+                        <img class="woodsprite-torso" id="woodsprite-body3" src="WoodSprites/body3.svg">
+                    </div>
+                </div>
+                <div class="centre-banner">
+                    <img id="face" src="BoatyBrynn.png">
+                    <h1 class="brown font" id="nametag">Brynn Davis</h1>
+                </div>
+            </div>
             <div id="contact">
                 <hr/>
                 <div class="links">
