renamed all 'woodsprites' to 'kodamas'. Sorry kodamas.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <body>
         <div id="centre-panel">
             <div id="media">
-                <div class="woodsprite-container hidden">
-                    <div class="woodsprite">
-                        <img class="woodsprite-head noselect" id="woodsprite-head1" src="WoodSprites/head1.svg">
-                        <img class="woodsprite-torso noselect" id="woodsprite-body1" src="WoodSprites/body1.svg">
+                <div class="kodama-container hidden">
+                    <div class="kodama">
+                        <img class="kodama-head noselect" id="kodama-head1" src="kodamas/head1.svg">
+                        <img class="kodama-torso noselect" id="kodama-body1" src="kodamas/body1.svg">
                     </div>
-                    <div class="woodsprite">
-                        <img class="woodsprite-head noselect" id="woodsprite-head2" src="WoodSprites/head2.svg">
-                        <img class="woodsprite-torso noselect" id="woodsprite-body2" src="WoodSprites/body2.svg">
+                    <div class="kodama">
+                        <img class="kodama-head noselect" id="kodama-head2" src="kodamas/head2.svg">
+                        <img class="kodama-torso noselect" id="kodama-body2" src="kodamas/body2.svg">
                     </div>
-                    <div class="woodsprite">
-                        <img class="woodsprite-head noselect" id="woodsprite-head3" src="WoodSprites/head3.svg">
-                        <img class="woodsprite-torso noselect" id="woodsprite-body3" src="WoodSprites/body3.svg">
+                    <div class="kodama">
+                        <img class="kodama-head noselect" id="kodama-head3" src="kodamas/head3.svg">
+                        <img class="kodama-torso noselect" id="kodama-body3" src="kodamas/body3.svg">
                     </div>
                 </div>
                 <div class="centre-banner">
