Kodama heads now rattle on document click

--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
             <div id="media">
                 <div class="kodama-container hidden">
                     <div class="kodama">
-                        <img class="kodama-head noselect" id="kodama-head1" src="kodamas/head1.svg">
+                        <div id="wrapper-head1">
+                            <img class="kodama-head noselect" id="kodama-head1" src="kodamas/head1.svg">
+                        </div>    
                         <img class="kodama-torso noselect" id="kodama-body1" src="kodamas/body1.svg">
                     </div>
                     <div class="kodama">
-                        <img class="kodama-head noselect" id="kodama-head2" src="kodamas/head2.svg">
+                        <div id="wrapper-head2">
+                            <img class="kodama-head noselect" id="kodama-head2" src="kodamas/head2.svg">
+                        </div>                        
                         <img class="kodama-torso noselect" id="kodama-body2" src="kodamas/body2.svg">
                     </div>
                     <div class="kodama">
-                        <img class="kodama-head noselect" id="kodama-head3" src="kodamas/head3.svg">
+                        <div id="wrapper-head3">
+                            <img class="kodama-head noselect" id="kodama-head3" src="kodamas/head3.svg">
+                        </div>
                         <img class="kodama-torso noselect" id="kodama-body3" src="kodamas/body3.svg">
                     </div>
                 </div>
